# kinect2_opencv

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
